terminando detalles para el deploy

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 DATABASE_URL="mysql://root:admin@localhost:3306/quioscoapp"
 
-DATABASE_URL="mysql://root:admin@localhost:3306/quioscoapp"
+DATABASE_URL="mysql://root:E2E4HE--gefac55e-E2E6C4E1Ab-d-b1@viaduct.proxy.rlwy.net:32570/railway"  
